# DNASequenceAnalyzer

./: .autotools  .cproject  .project  CMakeLists.txt  README.md  globalConstants.c  globalConstants.h
DNASequenceAligner/: DNASequenceAligner.c  alex.dna  alignerFunctions.c  alignerFunctions.h  constants.h  dnaAligner.c  dnaAligner.h  fileHandler.c  fileHandler.h  globalConstants.c  globalConstants.h  luis.dna  main.c
DNASequenceGenerator/: constants.c  constants.h  fileManagement.c  fileManagement.h  flags.txt  generatorFunctions.c  generatorFunctions.h  main.c
